fixed logo overlay on mobile view landing page

--- a/src/styles/components/_LandingPage.scss
+++ b/src/styles/components/_LandingPage.scss
@@ -1,4 +1,8 @@
 
+.landing-logo {
+    z-index: 0;
+}
+
 .full-screen-video-container {
     position: relative;
     height: 100vh;
@@ -10,7 +14,7 @@
 }
 
 .full-screen-video-container video {
-    z-index: 2;
+    z-index: 1;
     position: absolute;
     width: auto;
     height: auto;
@@ -22,7 +26,7 @@
 }
 
 .full-screen-video-content {
-    z-index: 10;
+    z-index: 1;
     display: flex;
     flex-direction: column;
     justify-content: space-around;
